Added an image and a few more elements

--- a/Test.html
+++ b/Test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph element. Cool eh?</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+<!DOCTYPE html> 
+<html>
+<head>
+    <title>Cinamaroll</title>
+</head>
+<body>
+    <h1>Hey. I'm a big heading</h1>
+    <p>Hey. I'm a <b>paragraph</b> element. Cool eh?</p>
+    <a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+    <p>My name is:<br>
+    cinamaroll</p>
+    <img src="https://www.sanrio.com/cdn/shop/articles/01132022_soc_pinterestboardcoverupdate_CN_1200x1200_10255920-d001-4530-a20e-3748a1ee61d8_1200x.png?v=1646098286">
+</body>
+</html>
